fix(wanderlog): make muted text in dropdown menus visible on hover

--- a/styles/wanderlog/catppuccin.user.less
+++ b/styles/wanderlog/catppuccin.user.less
@@ -253,6 +253,10 @@
         svg {
           filter: @base-filter;
         }
+
+        .text-muted {
+          color: @surface0 !important;
+        }
       }
     }
     .StyledDropdownMenu__optionSelected {
